feat: adicionando card de paises nao representados no grafico

--- a/assets/global.css
+++ b/assets/global.css
@@ -59,6 +59,7 @@
 }
 
 .container-imc-per-country section {
+  width: 100%;
   display: flex;
   flex-direction: column;
 
@@ -68,4 +69,56 @@
 
 .container-imc-per-country g.layer:nth-child(1) > rect:nth-child(1) {
   fill: #F7F8FA !important;
+}
+
+.container-imc-per-country .graph-container{
+  display: flex;
+  width: 100%;
+}
+
+.container-imc-per-country table {
+  width: 100%;
+  min-height: 520px;
+
+  border: 1px solid #555;
+  border-spacing: 0 0.5rem;
+  border-radius: 16px;
+
+  background: #fff;
+}
+
+.container-imc-per-country th {
+  padding: 1rem 2rem;
+
+  text-align: left;
+  
+  font-weight: 400;
+  line-height: 1rem;
+}
+
+.container-imc-per-country td {
+  padding: 0.5rem 2rem;
+  vertical-align: top;
+  border: 0;
+
+  font-family: sans-serif;
+}
+
+.container-imc-per-country div.graph-container h1 {
+  padding: 1rem 2rem;
+}
+
+.container-imc-per-country .notListedTeams {
+  width: 100%;
+  max-width: 400px;
+  max-height: 520px;
+  margin-left: 1.5rem;
+
+  /* box-shadow: 0 0 40px rgba(0, 0, 0, 0.15); */
+}
+
+.container-imc-per-country th {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: Roboto;
 }
