--- a/assets/global.css
+++ b/assets/global.css
@@ -122,3 +122,39 @@
   font-weight: 400;
   font-family: Roboto;
 }
+
+
+.medalhasPorAtleta header{  
+  height: 100px;
+  width: 100vw;
+  padding: 20px;
+  display: flex;
+  box-shadow: 1px 1px 5px black;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(to right, #0063c0, #EC9E21);
+}
+.medalhasPorAtleta h1{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: rgb(231, 228, 228);
+
+}
+.medalhasPorAtleta img{
+  height: 100%;
+}
+.medalhasPorAtleta header div{
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+.medalhasPorAtleta section{
+  display: flex;
+  align-items: flex-start;  
+  margin: 20px
+}
+
+.medalhasPorAtleta .grafico{
+  height: 80vh;
+  width: 100%
+}
+
